--- a/app/views/page/restaurant.html.erb
+++ b/app/views/page/restaurant.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, "| #{@r["name"]}" %>
-<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyDdqxN7U-Lv6g0a6yGmoivdM5ks6EvHs7Y&sensor=TRUE" %>
+<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initialize" %>
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
 		<% if @r.nil? %>
@@ -80,6 +80,7 @@
 <script>
 var geocoder;
 var map;
+
 function initialize() {
   geocoder = new google.maps.Geocoder();
   var mapOptions = {
