--- a/app/views/page/list.html.erb
+++ b/app/views/page/list.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-		<h2><%= active_user.username %>'s Dishlist - this page is not finished</h2>
+		<h2><%= active_user.username %>'s Dishlist</h2>
 		<div id="content">
 			<h3 class="gray">Loading...</h3>
 		</div>
