--- a/app/views/page/friends.html.erb
+++ b/app/views/page/friends.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-		<h2><%= active_user.username %>'s Friends - this page is not finished</h2>
+		<h2><%= active_user.username %>'s Friends</h2>
 		<div id="content">
-			<h3 class="gray">Loading...</h3>
+			<h3 class="gray">To do</h3>
 		</div>
 	</div>
 </div>
