--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -2,9 +2,25 @@
 	<div class="col-md-8 col-md-offset-2">
 		<h3>Recently Added:</h3>
 		<div class="row">
-		<% @restaurants.each do |r| %>
-			<%= render 'partials/restaurant', r: r %>
-		<% end %>
+			<div class="col-lg-8 col-md-10 col-xs-12">
+				<% @restaurants.each do |r| %>
+					<%= render 'partials/restaurant', r: r %>
+				<% end %>
+			</div>
+			<div class="col-lg-4 explanation visible-lg">
+				<h3>What is Dishlist?</h3>
+				<p>
+					<h5>Personal</h5>
+					Dishlist is a tool that allows you to mark dishes from restaurants that you want to try in the future. Search through our menus
+					or add your favorite dishes, then rate dishes after you've tried them.
+				</p>
+				<p>
+					<h5>Social</h5>
+					Find your friends to see which foods they're interested in trying, and see which dishes have been highly rated by the public.
+					This text will probably be changed later.
+				</p>
+			</div>
 		</div>
 	</div>
 </div>
+ 
