--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -17,26 +17,26 @@
 
 		<%= form_for(@user, :url => usercreate_path(@user)) do |f| %>
 	    <div class="form-group row">
-	      <%= f.label :username, class: "col-lg-2 control-label" %>
-	      <div class="col-lg-8">
+	      <%= f.label :username, class: "col-xs-2 control-label" %>
+	      <div class="col-xs-8">
 	        <%= f.text_field :username, :autofocus => true, class: "field__input" %>
 	      </div>
 	    </div>		
 	    <div class="form-group row">
-	      <%= f.label :email, class: "col-lg-2 control-label" %>
-	      <div class="col-lg-8">
+	      <%= f.label :email, class: "col-xs-2 control-label" %>
+	      <div class="col-xs-8">
 	        <%= f.email_field :email, :autofocus => true, class: "field__input" %>
 	      </div>
 	    </div>
 	    <div class="form-group row">
-	      <%= f.label :password, class: "col-lg-2 control-label" %>
-	      <div class="col-lg-8">
+	      <%= f.label :password, class: "col-xs-2 control-label" %>
+	      <div class="col-xs-8">
 	        <%= f.password_field :password, class: "field__input" %>
 	      </div>
 	    </div>
 	    <div class="form-group row">
-	      <%= f.label :password_confirmation, "Confirm", class: "col-lg-2 control-label" %>
-	      <div class="col-lg-8">
+	      <%= f.label :password_confirmation, "Confirm", class: "col-xs-2 control-label" %>
+	      <div class="col-xs-8">
 	        <%= f.password_field :password_confirmation, class: "field__input" %>
 	      </div>
 	    </div>
