--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
         <li>
           <form class="navbar-form navbar-right" role="search" action="/search">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="tacos, cheap dinner" name="term" id="sterm">
+              <input type="text" class="form-control" placeholder="tacos" name="term" id="sterm">
               <input type="text" class="form-control" placeholder="la jolla" name="location" id="sloc">
               <button type="submit" class="btn btn-primary" id="search">Search</button>
             </div>
