--- a/app/views/page/restaurant.html.erb
+++ b/app/views/page/restaurant.html.erb
@@ -15,7 +15,7 @@
 		<% end %>
 		<div class="r-lead" id="r-name"><%= @r["name"] %></div>
 		<div class="row">
-			<div class="col-md-5">
+			<div class="col-md-5 col-sm-6">
 				<%= image_tag @r["yelp_image_url"], class: "img-thumbnail imgblock" %>
 				<div class="textblock">
 					<div class="bigger"><span class="rating"><%= @r["rating"] %></span>/5 in 
@@ -30,7 +30,7 @@
 					<div><%= @r["display_address"] %></div>
 					<div>Phone: <%= @r["display_phone_number"] %></div>
 				</div>
-				<div>Address: <%= @r["full_address"] %></div>
+				<div class="small-margin">Address: <%= @r["full_address"] %></div>
 				<% if @dishes.any? %>
 					<div><%= @dishes.size %> dishes are listed </div>
 				<% end %>
@@ -39,7 +39,7 @@
 					<div class="alert">This location is closed!</div>
 				<% end %>
 			</div>
-			<div class="col-md-7">
+			<div class="col-md-7 col-sm-6">
 				<div id="map-canvas" style="height: 300px;"></div>
 			</div>
 		</div>
@@ -83,9 +83,11 @@
 					</div>
 				<% end %>
 			<% else %>
-				<h2 class="gray">There aren't any dishes listed at this restaurant.</h2>
-				<div id="uselocu" class="btn btn-info locubutton">Search for a menu on Locu</div>
-				<h3 class="gray hiding" id="usinglocu">Loading...</h3>
+				<div class="col-xs-10 col-xs-push-1">
+					<h2 class="gray">There aren't any dishes listed at this restaurant.</h2>
+					<div id="uselocu" class="btn btn-info locubutton">Search for a menu on Locu</div>
+					<h3 class="gray hiding" id="usinglocu">Loading...</h3>
+				</div>
 			<% end %>
 		</div>
 		<% if signed_in? %>
