Load more on scroll

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="collapsing-bar">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <form class="navbar-form navbar-right" role="search" action="/search">
+          <form class="navbar-form navbar-right" role="search" action="/search" id="makesearch">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="tacos" name="term" id="sterm">
               <input type="text" class="form-control" placeholder="la jolla" name="location" id="sloc">
@@ -21,6 +21,7 @@
             </div>
           </form>
         </li>
+        <li class="center"><i class="hidden spinnas fa fa-spinner fa-spin" id="spinning"></i></li>
         <% if signed_in? %>
         <li><%= link_to "My Dishlist", dishlist_path %></li>
         <li><%= link_to "Friends", friends_path %></li>
@@ -37,5 +38,8 @@
 <script>
   $(".navbar-toggle").click(function(event) {
     $(".navbar-collapse").toggle('in');
+  });
+  $("#makesearch").submit(function(event) {
+    $("#spinning").removeClass("hidden");
   });
 </script>
