--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,13 @@
+@media (max-width: 600px) {
+  .restaurant {
+  	h4 {
+  		font-size: 1.2em;
+  		margin-bottom: -2px;
+  	}
+  	font-size: 0.8em;
+  }
+}
+
 .navbar-brand {
 	font-size: 30px;
 }
@@ -232,7 +242,8 @@ label {
 		cursor: pointer;
 	}
 }
-.fa-ban {
+.fa-trash-o {
+	width: 30px;
 	&:hover {
 		color: #CF626D;
 	}
@@ -270,6 +281,13 @@ label {
 	form {
 		margin-left: 10px;
 	}
+}
+.hidden {
+	visibility: hidden;
+}
+.spinnas {
+	position: relative;
+	top: 10px;
 }
 
 .small-margin {
