Live search on restaurnat

--- a/app/views/page/friends.html.erb
+++ b/app/views/page/friends.html.erb
@@ -2,8 +2,7 @@
 	<div class="col-md-8 col-md-offset-2">
 		<h2><%= active_user.username %>'s Friends <i class="fa fa-smile-o"></i></h2>
 		<div id="content">
-			<h3 class="gray">You currently don't have any friends. <i class="fa fa-frown-o"></i></h3>
-
+			<h3 class="gray">This feature needs to be implemented. <i class="fa fa-frown-o"></i></h3>
 		</div>
 		<hr />
 		<h5>Find a friend:</h5>
