--- a/app/views/page/list.html.erb
+++ b/app/views/page/list.html.erb
@@ -16,7 +16,7 @@
 			<% else %>
 				<%= link_to 'disliked', '/dishlist/?show=disliked' %>
 			<% end %></h2>
-		<div id="content">
+		<div id="content" class="dishes">
 			<h3 class="gray">Loading...</h3>
 		</div>
 	</div>
