--- a/app/views/partials/_restaurant.html.erb
+++ b/app/views/partials/_restaurant.html.erb
@@ -11,7 +11,7 @@
 					<span class="text-warning"><%= r["display_yelp_categories"] %></span>
 				</div>
 				<div class="col-sm-7">
-					<%= r["short_address"] %>
+					<i class="fa fa-map-marker"></i> <%= r["short_address"] %>
 				</div>
 			</div>
 	</div>
