--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -81,6 +81,7 @@ label {
 }
 
 .restaurant {
+	border-radius: 2px;
 	background-color: #FFF;
 	border: 1px solid;
 	border-color: #e5e6e9 #dfe0e4 #d0d1d5;
@@ -123,8 +124,8 @@ label {
 
 .r-lead {
 	color: #333;
-	font-size: 2.7em;
-	margin-bottom: 14px;
+	font-size: 2.5em;
+	margin-bottom: -8px;
 }
 
 #mapsaddress {
@@ -136,14 +137,16 @@ label {
 }
 
 #map-canvas {
-	box-shadow: 0px 2px 4px #AAA;
+	box-shadow: 0px 1px 4px #AAA;
 }
 
 .imgblock {
+	position: relative;
+	top: -20px;
   display:inline-block;
-  width:100px;
-  height:100px;
-  vertical-align:top;
+  width:80px;
+  height:80px;
+  vertical-align: top;
   margin-right:10px;
 }
 
@@ -154,6 +157,12 @@ label {
 }
 
 .dishes {
+	background: #FCFCFC;
+	border-radius: 4px;
+	border: 1px solid;
+	border-top: 2px solid;
+	border-color: #16AB99 #dfe0e4 #d0d1d5;
+	padding: 10px;
 	margin-bottom: 40px;
 }
 
@@ -172,6 +181,13 @@ label {
 			visibility: visible;
 		}
 	}
+}
+
+.dish-search {
+	border: none;
+	border-bottom: 2px solid #888;
+	background: #FCFCFC;
+	box-shadow: none;
 }
 
 #yourlist {
@@ -200,6 +216,17 @@ label {
 }
 
 // restaurant page
+.card {
+	position: relative;
+	top: -14px;
+	padding: 12px;
+	border-radius: 2px;
+	background-color: #FFF;
+	box-shadow: 0px 2px 4px #AAA;
+}
+.title-area {
+	margin-bottom: -14px;
+}
 .locubutton {
 	margin-top: 20px;
 }
@@ -331,10 +358,6 @@ label {
 .spinnas {
 	position: relative;
 	top: 10px;
-}
-
-.small-margin {
-	margin-bottom: 20px;
 }
 
 // buttons
