--- a/app/views/page/restaurant.html.erb
+++ b/app/views/page/restaurant.html.erb
@@ -13,13 +13,19 @@
 		<% if signed_in? %>
 			<div id="username"><%= active_user.username %></div>
 		<% end %>
-		<div class="r-lead" id="r-name"><%= @r["name"] %></div>
+
+		<div id="map-canvas" style="height: 300px;"></div>
 		<div class="row">
-			<div class="col-md-5 col-sm-6">
-				<%= image_tag @r["yelp_image_url"], class: "img-thumbnail imgblock" %>
-				<div class="textblock">
-					<div class="bigger"><span class="rating"><%= @r["rating"] %></span>/5 in 
-						<%= link_to "#{@r["review_count"]} reviews", "http://www.yelp.com/search?find_desc=#{@r["name"]}&find_loc=#{@r["short_address"]}&ns=1", target: "_blank" %></h5></div>
+			<div class="col-sm-6 col-sm-push-1">
+				<div class="card">
+					<div class="title-area">
+						<%= image_tag @r["yelp_image_url"], class: "img-thumbnail imgblock" %>
+						<div class="textblock">
+							<div class="r-lead" id="r-name"><%= @r["name"] %></div>
+							<div class="bigger"><span class="rating"><%= @r["rating"] %></span>/5 in 
+								<%= link_to "#{@r["review_count"]} reviews", "http://www.yelp.com/search?find_desc=#{@r["name"]}&find_loc=#{@r["short_address"]}&ns=1", target: "_blank" %></h5></div>
+						</div>
+					</div>
 					<div>Categories: 
 						<% if @r["display_yelp_categories"] %>
 							<%= @r["display_yelp_categories"] %>
@@ -29,23 +35,28 @@
 					</div>
 					<div><%= @r["display_address"] %></div>
 					<div>Phone: <%= @r["display_phone_number"] %></div>
+					<div class="small-margin"><i class="fa fa-map-marker"></i> <%= @r["full_address"] %></div>
+					<% if @dishes.any? %>
+						<div><%= @dishes.size %> dishes are listed </div>
+					<% end %>
+					<% if signed_in? %><div>Your Dishlist contains <span id="yourlist">0</span> dishes from this restaurant.</div><% end %>
+					<% if @r["closed"] == true %>
+						<div class="alert">This location is closed!</div>
+					<% end %>
 				</div>
-				<div class="small-margin">Address: <%= @r["full_address"] %></div>
-				<% if @dishes.any? %>
-					<div><%= @dishes.size %> dishes are listed </div>
-				<% end %>
-				<% if signed_in? %><div>Your Dishlist contains <span id="yourlist">0</span> dishes from this restaurant.</div><% end %>
-				<% if @r["closed"] == true %>
-					<div class="alert">This location is closed!</div>
-				<% end %>
-			</div>
-			<div class="col-md-7 col-sm-6">
-				<div id="map-canvas" style="height: 300px;"></div>
 			</div>
 		</div>
+
 		<div class="row dishes">
 			<% if @dishes.any? %>
-				<h2>Popular Dishes</h2>
+				<div class="row">
+					<div class="col-sm-6">
+						<h2>Popular Dishes</h2>
+					</div>
+					<div class="col-sm-6">
+						<h2><i class="fa fa-search"></i> <input class="dish-search" placeholder="search the menu"></input></h2>
+					</div>
+				</div>
 				<% @dishes.each do |dish| %>
 					<div class="dish col-xs-6" id=<%= dish.id %>>
 						<div class="fixedwidth">
@@ -67,7 +78,7 @@
 									<div class="rating-good" style="width: 100px;"></div> in <%= dish["liked"] %> ratings.
 								<% elsif dish["disliked"] && dish["disliked"] > 2 && (!dish["liked"] || dish["liked"] == 0) %>
 									<div class="rating-bad" style="width: 100px;"></div> in <%= dish["disliked"] %> ratings.
-								<% elsif (dish["disliked"] && dish["disliked"] > 1) && (dish["liked"] && dish["liked"] > 1) %>
+								<% elsif (dish["disliked"] && dish["disliked"] >= 1) && (dish["liked"] && dish["liked"] >= 1) %>
 									<% likewidth = dish["liked"].to_f/(dish["liked"]+dish["disliked"])*100 %>
 									<div class="rating-good" style=<%= "width:#{likewidth}px;" %>></div>
 									<div class="rating-bad" style=<%= "width:#{100-likewidth}px;margin-left:-3px;" %>></div> in <%= dish["liked"]+dish["disliked"] %> ratings.
