--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,7 +124,7 @@ label {
 
 .r-lead {
 	color: #333;
-	font-size: 2.5em;
+	font-size: 2.3em;
 	margin-bottom: -8px;
 }
 
@@ -142,7 +142,7 @@ label {
 
 .imgblock {
 	position: relative;
-	top: -20px;
+	top: -22px;
   display:inline-block;
   width:80px;
   height:80px;
@@ -151,8 +151,9 @@ label {
 }
 
 .textblock {
+	vertical-align: bottom;
   display:inline-block;
-  width:200px;	
+  width: 230px;	
   margin-bottom: 20px;
 }
 
@@ -227,7 +228,9 @@ label {
 	box-shadow: 0px 2px 4px #AAA;
 }
 .title-area {
-	margin-bottom: -14px;
+	position: relative;
+	top: -12px;
+	margin-bottom: -26px;
 }
 .locubutton {
 	margin-top: 20px;
@@ -358,6 +361,7 @@ label {
 	visibility: hidden;
 }
 .spinnas {
+	color: #FFF;
 	position: relative;
 	top: 10px;
 }
