--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -32,7 +32,7 @@
 	        <%= f.password_field :password, class: "field__input" %>
 	      </div>
 	    </div>
-		  <%= f.submit "Login", class: "btn btn-primary" %>
+		  <%= f.submit "Login", class: "btn btn-info" %>
 		<% end %>
 
 	</div>
