--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -40,7 +40,7 @@
 	        <%= f.password_field :password_confirmation, class: "field__input" %>
 	      </div>
 	    </div>
-		  <%= f.submit "Sign up", class: "btn btn-primary" %>
+		  <%= f.submit "Sign up", class: "btn btn-info" %>
 		<% end %>
 
 	</div>
