--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-8 col-md-offset-2">
+	<div class="col-md-8 col-md-offset-2 fullcontainer">
 		<h3>Recently Added Restaurants</h3>
 		<div class="row">
 			<div class="col-lg-8 col-md-10 col-xs-12" id="home-content">
