Making dishlist icons look good on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -291,6 +291,13 @@ label {
   	i {
 			visibility: visible !important;
   	}
+  	.iconset {
+  		margin-top: 14px;
+  		width: 100% !important;
+  	}
+  	.descrip-8 {
+  		width: 100% !important;
+  	}
   }
 }
 .restaurant-listing {
