--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -143,6 +143,10 @@ label {
 	box-shadow: 0px 1px 4px #AAA;
 }
 
+.img-tmb {
+	box-shadow: 0px 1px 4px #AAA;
+}
+
 .imgblock {
 	position: relative;
 	top: -22px;
