--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -143,7 +143,8 @@ label {
 	box-shadow: 0px 1px 4px #AAA;
 }
 
-.img-tmb {
+.img-rounded {
+	margin: 5px 0 5px -5px;
 	box-shadow: 0px 1px 4px #AAA;
 }
 
