--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,7 +144,9 @@ label {
 }
 
 .img-rounded {
-	margin: 5px 8px 5px -5px;
+	width: 90%;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	box-shadow: 0px 1px 4px #AAA;
 }
 
