--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,7 +144,6 @@ label {
 }
 
 .img-rounded {
-	width: 90%;
 	margin-top: 5px;
 	margin-bottom: 5px;
 	box-shadow: 0px 1px 4px #AAA;
@@ -507,6 +506,9 @@ label {
   }
 }
 @media (max-width: 600px) {
+	.img-rounded {
+		width: 80px;
+	}
 	#homelink {
 		display: block;
 	}
