--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -497,6 +497,7 @@ label {
 }
 
 // Fixes for iOS. Important! is a necessary evil. Forgive me father for I have sinned
+// mobile portrait
 @media (max-width: 550px) {
 	.control-label {
   	width: 90% !important;
@@ -504,13 +505,17 @@ label {
   .form-group .col-xs-8 {
   	width: 100% !important;
   }
+	.restaurant .col-xs-4 {
+		width: 90px;
+	}
 }
+// all mobile
 @media (max-width: 600px) {
 	.img-rounded {
 		width: 80px;
 	}
 	.restaurant .col-xs-4 {
-		width: 105px;
+		width: 110px;
 	}
 	#homelink {
 		display: block;
@@ -560,6 +565,7 @@ label {
   	width: 100% !important;
   }
 }
+// iPhone specific
 @media only screen 
 and (min-device-width : 320px) 
 and (max-device-width : 568px) {
